# latex_resume_generator

./: .gitignore  Justfile  README.md  agents.md  build.sh  config.yaml  draft_private.yaml  draft_public.yaml  pyproject.toml  requirements.txt
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/integrated_pdf_financial_20260315/: index.md  metadata.json  spec.md
conductor/archive/workflow_enhancements_20260316/: index.md  metadata.json
conductor/tracks/integrated_pdf_financial_20260315/: plan.md
conductor/tracks/interactive_cli_expansion_20260320/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/workflow_enhancements_20260316/: plan.md  spec.md
inputs/: private.yaml  public.yaml
src/: engine.py  main.py  preview_server.py  sanitizer.py  session_manager.py  tui_app.py  tui_widgets.py  undo_manager.py  validators.py  web_app.py
templates/cover_letter/: formal.tex  standard.tex
templates/resume/: classic.tex  financial.tex  minimal.tex  modern.tex
templates/web/: base.html  forms.html
tests/: test_cli.py  test_config.py  test_engine_compile.py  test_integration_financial.py  test_interactive.py  test_interactive_education.py  test_interactive_load.py  test_interactive_projects_management.py  test_interactive_skills_management.py  test_interactive_skills_projects.py  test_interactive_work.py  test_preview_server.py  test_privacy.py  test_session_manager.py  test_tui_app.py  test_undo_manager.py  test_validation.py  test_validators.py  test_web_app.py
(+3 files in other folders)
