[project]
name = "latex-resume-generator"
version = "0.1.0"
description = "CLI-based LaTeX resume and cover letter generator"
requires-python = ">=3.12"
dependencies = [
    "jinja2",
    "PyYAML",
    "typer",
    "simple-term-menu",
    "textual>=0.50.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pygments>=2.17.0",
]

[project.scripts]
resume-generator = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
